syntax = "proto3";

package chat;
option go_package = "chat/api/chat;chat";

// 客户端类型
enum CIMClientType {
  kCIM_CLIENT_TYPE_DEFAULT = 0; // unset
  kCIM_CLIENT_TYPE_ANDROID = 1; // 安卓
  kCIM_CLIENT_TYPE_IOS = 2;     // iOS
  kCIM_CLIENT_TYPE_WEB = 3;     // WebSocket
  kCIM_CLIENT_TYPE_REST_API = 4; // RestAPI
  kCIM_CLIENT_TYPE_PC_WINDOWS = 5; // PC Windows
  kCIM_CLIENT_TYPE_MAC_OS = 6;     // MAC
}

// 会话类型
enum IMSessionType {
  kCIM_SESSION_TYPE_Invalid = 0; // 无效会话
  kCIM_SESSION_TYPE_SINGLE = 1;  // 单聊
  kCIM_SESSION_TYPE_GROUP = 2;   // 群聊
  // kCIM_SESSION_TYPE_CHAT_ROOM = 3; // 聊天室
  // kCIM_SESSION_TYPE_CONSULT = 4; // 客服
}

// 消息类型
enum IMMsgType {
  kCIM_MSG_TYPE_UNKNOWN = 0; // 未知类型消息，本地使用，发送时请勿使用
  kCIM_MSG_TYPE_TEXT = 1;         // 文本
  kCIM_MSG_TYPE_FILE = 2;         // 文件
  kCIM_MSG_TYPE_IMAGE = 3;        // 图片
  kCIM_MSG_TYPE_AUDIO = 4;        // 声音
  kCIM_MSG_TYPE_VIDEO = 5;        // 视频
  kCIM_MSG_TYPE_LOCATION = 6;     // 位置
  kCIM_MSG_TYPE_ROBOT = 7;        // 图灵机器人消息
  kCIM_MSG_TYPE_TIPS = 8;         // 提醒类型
  kCIM_MSG_TYPE_NOTIFACATION = 9; // 系统通知（包括入群出群通知等）
  kCIM_MSG_TYPE_AVCHAT = 10;      // 由音视频通话产生的消息
  // kCIM_MSG_TYPE_CUSTOM = 100; // 自定义
}

// 消息状态
enum CIMMsgStatus {
  kCIM_MSG_STATUS_NONE = 0;       // 默认，不能当查询条件，意义太多
  kCIM_MSG_STATUS_UNREAD = 1;     // 收到消息，未读
  kCIM_MSG_STATUS_READ = 2;       // 收到消息，已读
  kCIM_MSG_STATUS_DELETED = 3;    // 已删
  kCIM_MSG_STATUS_SENDING = 4;    // 发送中
  kCIM_MSG_STATUS_SENT = 5;       // 已发送
  kCIM_MSG_STATUS_RECEIPT = 6;    // 对方已读发送的内容
  kCIM_MSG_STATUS_DRAFT = 7;      // 草稿
  kCIM_MSG_STATUS_SendCacel = 8;  // 发送取消
  kCIM_MSG_STATUS_REFUSED = 9;    // 被对方拒绝，比如被对方加入黑名单等等
  kCIM_MSG_STATUS_FAILED = 10;    // 发送失败，客户端使用
}

// 会话状态
enum IMSessionStatusType {
  kCIM_SESSION_STATUS_UNKNOWN = 0; // 未知
  kCIM_SESSION_STATUS_OK = 1;
  kCIM_SESSION_STATUS_DELETE = 2;
}

// 消息属性
enum IMMsgFeature {
  kCIM_MSG_FEATURE_DEFAULT = 0; // 默认
  kCIM_MSG_FEATURE_LEAVE_MSG = 1;         // 离线消息(和漫游消息有何区别)
  kCIM_MSG_FEATURE_ROAM_MSG = 2;          // 漫游消息，多端同步接收，永久存储(或1年)
  // kCIM_MSG_FEATURE_SYNS_MSG = 3;       // 同步消息
  // kCIM_MSG_FEATURE_CUSTOMIZED_MSG = 4; // 透传消息
}

// 消息错误码
enum IMResCode {
  kCIM_RES_CODE_UNKNOWN = 0; // unknown
  kCIM_RES_CODE_OK = 1;      // 一切正常
  // kCIM_RES_CODE_ERROR = 1;           // 错误
  // kCIM_RES_CODE_Group_NOT_EXIST = 2; // 群不存在
  // kCIM_RES_CODE_IN_BLACK = 3;        // 被接收方加入黑名单
}